@@ -1,13 +1,20 @@
 package de.plixo.galactic;
 
-import lombok.Getter;
-
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.lang.management.ManagementFactory;
 
 public class Main {
     public static void main(String[] args) throws IOException {
+        var runtimeMxBean = ManagementFactory.getRuntimeMXBean();
+        var arguments = runtimeMxBean.getInputArguments();
+        if (!arguments.contains("--enable-preview")) {
+            throw new RuntimeException(
+                    "Please enable preview features with the '--enable-preview' vm argument");
+        }
+
+
         String mainClass = "project/Main";
         var language = new Universe();
         var root = language.parse(new File("resources/project"));
